--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        app:is_show_small="false"
         android:padding="20dp"
         app:circle_radius="100dp"></com.calypso.rosyprogress.RosyProgress>
 </RelativeLayout>
