--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- rosyprogress -->
+    <color name="circle_solide_color">#e7e3e3</color>
+    <color name="circle_stroke_color">#e7e3e3</color>
+    <color name="small_circle_solide_color">#ffffff</color>
+    <color name="small_circle_stroke_color">#6c9bda</color>
+    <color name="text_color">#2C97DE</color>
+
+    <!-- home -->
+    <color name="home_text_color">#224369</color>
+    <color name="home_title_color">#455e7a</color>
 </resources>
