--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,41 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- rosyprogress -->
+    <dimen name="progress_width">6dp</dimen>
+    <dimen name="circle_radius">100dp</dimen>
+    <dimen name="circle_stroke_width">6dp</dimen>
+    <dimen name="small_circle_radius">4dp</dimen>
+    <dimen name="small_circle_stroke_width">1dp</dimen>
+
+
+    <!-- text size -->
+    <dimen name="text_size_35">35sp</dimen>
+    <dimen name="text_size_34">34sp</dimen>
+    <dimen name="text_size_33">33sp</dimen>
+    <dimen name="text_size_32">32sp</dimen>
+    <dimen name="text_size_31">31sp</dimen>
+    <dimen name="text_size_30">30sp</dimen>
+    <dimen name="text_size_29">29sp</dimen>
+    <dimen name="text_size_28">28sp</dimen>
+    <dimen name="text_size_26">26sp</dimen>
+    <dimen name="text_size_25">25sp</dimen>
+    <dimen name="text_size_24">24sp</dimen>
+    <dimen name="text_size_23">23sp</dimen>
+    <dimen name="text_size_22">22sp</dimen>
+    <dimen name="text_size_21">21sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
+    <dimen name="text_size_19">19sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
+    <dimen name="text_size_17">17sp</dimen>
+    <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_15">15sp</dimen>
+    <dimen name="text_size_14">14sp</dimen>
+    <dimen name="text_size_13">13sp</dimen>
+    <dimen name="text_size_12">12sp</dimen>
+    <dimen name="text_size_11">11sp</dimen>
+    <dimen name="text_size_10">10sp</dimen>
+    <dimen name="text_size_9">9sp</dimen>
+    <dimen name="text_size_8">8sp</dimen>
+    <dimen name="text_size_7">7sp</dimen>
 </resources>
